# CarbonEmission

./: CarbonCheck.pptx  README.md
backend/: .gitignore  README.md  carboncheck.db  pyproject.toml  requirements.txt
backend/app/: database.py  db_models.py  main.py  schemas.py  suggestions.py
backend/app/ml/: calculator.py  emission_factors.py  model.pkl  predictor.py  train_model.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: CarbonRing.jsx  Footer.jsx  Navbar.jsx
frontend/src/context/: CarbonContext.jsx
frontend/src/pages/: About.jsx  Calculator.jsx  Contact.jsx  Dashboard.jsx  Home.jsx  NotFound.jsx  Result.jsx  Tips.jsx
