[project]
name = "carboncheck-backend"
version = "1.0.0"
description = "CarbonCheck AI Carbon Footprint Calculator — FastAPI + ML backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "email-validator>=2.2.0",
    "sqlalchemy==2.0.35",
    "scikit-learn==1.5.2",
    "pandas==2.2.3",
    "numpy==1.26.4",
    "joblib==1.4.2",
    "python-multipart==0.0.9",
    "langchain>=1.3.2",
    "langchain-google-genai>=4.2.7",
    "faiss-cpu>=1.14.3",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
]

[tool.uv]
package = false
